--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -44,5 +44,9 @@
 
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
